--- a/Result.html
+++ b/Result.html
@@ -73,7 +73,7 @@
 
     a.profile-link {
       color: white;
-      text-decoration: underline;
+      text-decoration: none;
       font-weight: bold;
       font-size: 1.7rem;
     }
