--- a/Result.html
+++ b/Result.html
@@ -50,6 +50,13 @@
       text-shadow: 0 0 5px #57b9ff, 0 0 10px #57b9ff;
     }
 
+    a.profile-link {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+      font-size: 1.7rem;
+    }
+
     #moreButton {
       display: inline-block;
       padding: 10px 18px;
@@ -71,11 +78,13 @@
       display: none;
     }
 
-    a.profile-link {
-      color: white;
-      text-decoration: none;
-      font-weight: bold;
-      font-size: 1.7rem;
+    .no-save {
+      -webkit-user-drag: none;
+      user-select: none;
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      pointer-events: auto;
     }
   </style>
 </head>
@@ -85,9 +94,7 @@
   <div class="section" id="compatibilityText"></div>
   <div class="section" id="sugarText"></div>
   <div class="section" id="inviteText"></div>
-  <div>
-    <a id="moreButton" href="#">More about you</a>
-  </div>
+  <div><a id="moreButton" href="#">More about you</a></div>
   <div id="typeDetails"></div>
 
   <script>
@@ -96,8 +103,8 @@
     const q4 = params.get("q4");
     const q5 = params.get("q5");
     const q6 = params.get("q6");
-    const q9 = params.get("q9");
     const q8 = params.get("q8");
+    const q9 = params.get("q9");
 
     const roomTitle = document.getElementById("roomTitle");
     const resultBody = document.getElementById("resultBody");
@@ -105,6 +112,8 @@
     const inviteText = document.getElementById("inviteText");
     const sugarText = document.getElementById("sugarText");
     const compatibilityText = document.getElementById("compatibilityText");
+    const typeDetails = document.getElementById("typeDetails");
+    const moreButton = document.getElementById("moreButton");
 
     let room = "";
     if (q3 === "whipped") {
@@ -122,22 +131,22 @@
     }
 
     const archetypes = {
-      "blue-control": ["Tender Protector", "You lead with gravity, not volume."],
-      "blue-partner control": ["Devoted Darling", "Nothing is as kinky as loyalty."],
-      "blue-depends mood": ["Heatwave", "There's no need to change who you are..."],
-      "blue-depends partner": ["Mood Multiplier", "You match their vibe—and raise it."],
-      "green-control": ["Charmer in Charge", "You don’t just take control. You make them beg for it."],
-      "green-partner control": ["Promiscuous Plaything", "Are you ready for a wild ride!"],
-      "green-depends mood": ["Bedroom Adventurer", "I'm up for anything and down to get down and dirty."],
-      "green-depends partner": ["Generous Giver", "You have so much to give, you just need someone to give it to."],
-      "red-control": ["Dungeon Master", "You’re not just having a fantasy. You’re the one in charge of it."],
-      "red-partner control": ["Claimed & Trained", "The deeper you give in the more pleasure you'll feel."],
-      "red-depends mood": ["The Provoker", "You press buttons—on purpose."],
-      "red-depends partner": ["The Punish Me", "What you call defiance, I call foreplay."]
+      "red-partner control": ["Claimed & Trained", "The deeper you give in the more pleasure you'll feel.", "The harder the mindfucking the better. – Anonymous", "You don’t want to just submit, you want to surrender completely..."],
+      "blue-control": ["Tender Protector", "You lead with gravity, not volume.", "The strongest love is the love that can demonstrate its fragility. – Paulo Coelho", "You lead with grace..."],
+      "blue-partner control": ["Devoted Darling", "Nothing is as kinky as loyalty.", "Love is composed of a single soul inhabiting two bodies. – Aristotle", "You don’t perform devotion..."],
+      "blue-depends mood": ["Heatwave", "There's no need to change who you are...", "“Maybe people think I look sexy because I feel sexy…” – Scarlett Johansson", "You don’t just walk into a room..."],
+      "blue-depends partner": ["Mood Multiplier", "You match their vibe—and raise it.", "I don’t adapt to people. I evolve with them. – Anonymous", "You don’t lead or follow..."],
+      "green-control": ["Charmer in Charge", "You don’t just take control. You make them beg for it.", "Power isn’t taken. It’s given—willingly. – Toni Morrison", "You don’t dominate with force..."],
+      "green-partner control": ["Promiscuous Plaything", "Are you ready for a wild ride!", "Sex is part of nature. I go along with nature. – Marilyn Monroe", "You’re here for the spark..."],
+      "green-depends mood": ["Bedroom Adventurer", "I'm up for anything and down to get down and dirty.", "It is not by obeying the rules that we come to know pleasure, but by breaking them. – Anaïs Nin", "You crave novelty..."],
+      "green-depends partner": ["Generous Giver", "You have so much to give, you just need someone to give it to.", "Pleasure is the measure of connection. – Esther Perel", "You feel most alive..."],
+      "red-control": ["Dungeon Master", "You’re not just having a fantasy. You’re the one in charge of it.", "Power is the ultimate aphrodisiac. – Henry Kissinger", "You don’t play a dominant..."],
+      "red-depends mood": ["The Provoker", "You press buttons—on purpose.", "Power is not given to you. You have to take it. – Beyoncé Knowles", "You poke, provoke..."],
+      "red-depends partner": ["The Punish Me", "What you call defiance, I call foreplay.", "Punish me right, and I’ll beg for more. – Anonymous", "You test limits..."]
     };
 
     const key = `${room}-${q9}`;
-    const [typeName, slogan] = archetypes[key] || ["Unknown", ""];
+    const [typeName, slogan, quote, description] = archetypes[key] || ["Unknown", "", "", ""];
 
     let safeName = typeName.toLowerCase().replace(/\s+/g, "_").replace(/[^a-z0-9_]/g, "");
     if (typeName === "Claimed & Trained") safeName = "claimed__trained";
@@ -147,18 +156,17 @@
     if (typeName !== "Unknown" && (q8 === "eggplant" || q8 === "cat")) {
       const genderSuffix = q8 === "eggplant" ? "male" : "female";
       const imagePath = `images/${safeName}_${genderSuffix}.jpg`;
-
       imageHTML = `
-        <a href="/profiles/${profileSlug}.html">
-          <img src="${imagePath}" alt="${typeName} Image" style="
+        <a href="/profiles/${profileSlug}.html" title="View full profile">
+          <img src="${imagePath}" alt="${typeName} Image" class="no-save" style="
             max-width: 100%;
             height: auto;
             border-radius: 16px;
             margin: 15px 0;
             border: 4px solid gold;
             box-shadow: 0 0 8px rgba(255, 215, 0, 0.6);
-            pointer-events: none;
-            user-select: none;
+            pointer-events: auto;
+            user-drag: none;
           ">
         </a>
       `;
@@ -168,7 +176,7 @@
       <div style="text-decoration: underline; font-weight: normal; margin-bottom: 6px;">
         Your Sexual Profile:
       </div>
-      <div style="margin-bottom: 8px;">
+      <div>
         <a href="/profiles/${profileSlug}.html" class="profile-link">${typeName}</a>
       </div>
       <div style="font-style: italic; margin-bottom: 12px;">
@@ -187,7 +195,7 @@
       "Bedroom Adventurer": ["Generous Giver", "Promiscuous Plaything", "The Punish Me"],
       "Charmer in Charge": ["Promiscuous Plaything", "Generous Giver", "Claimed & Trained"],
       "Claimed & Trained": ["Dungeon Master", "The Provoker", "Charmer in Charge"],
-      "The Punish Me": ["The Provoker", "Claimed & Trained", "Bedroom Adventurer"],
+      "The Punish Me": ["The Provoker", "Dungeon Master", "Bedroom Adventurer"],
       "The Provoker": ["The Punish Me", "Claimed & Trained", "Generous Giver"],
       "Dungeon Master": ["Claimed & Trained", "The Punish Me", "Promiscuous Plaything"]
     };
@@ -202,9 +210,11 @@
       `;
     }
 
+    moreButton.href = `/profiles/${profileSlug}.html`;
+
     if (q5 === "yes" || q5 === "maybe" || q5 === "iam") {
       sugarText.innerHTML = `🍫 Visit our chocolate shop and use the password: <strong>Sweet Spot!</strong><br>
-        to gain entry to our Speakeasy:<br><strong>Sugar Daddy’s</strong>`;
+      to gain entry to our Speakeasy:<br><strong>Sugar Daddy’s</strong>`;
     }
 
     if (q4 === "yes" || q4 === "little" || q6 === "flaunt" || q6 === "partner shine") {
@@ -217,7 +227,13 @@
       `;
     }
 
-    document.getElementById("moreButton").href = `/profiles/${profileSlug}.html`;
+    function showTypeDetails() {
+      typeDetails.style.display = "block";
+      typeDetails.innerHTML = `
+        <br><strong>Quote:</strong><br>${quote}<br><br>
+        <strong>Description:</strong><br>${description}
+      `;
+    }
   </script>
 </body>
 </html>
