--- a/Result.html
+++ b/Result.html
@@ -184,7 +184,7 @@
       "Bedroom Adventurer": ["Generous Giver", "Promiscuous Plaything", "The Punish Me"],
       "Charmer in Charge": ["Promiscuous Plaything", "Generous Giver", "Claimed & Trained"],
       "Claimed & Trained": ["Dungeon Master", "The Provoker", "Charmer in Charge"],
-      "The Punish Me": ["The Provoker", "Dungeon Master", "Bedroom Adventurer"],
+      "The Punish Me": ["The Provoker", "Claimed & Trained", "Bedroom Adventurer"],
       "The Provoker": ["The Punish Me", "Claimed & Trained", "Generous Giver"],
       "Dungeon Master": ["Claimed & Trained", "The Punish Me", "Promiscuous Plaything"]
     };
