--- a/profiles/tender_protector.html
+++ b/profiles/tender_protector.html
@@ -9,20 +9,21 @@
     body {
       margin: 0;
       font-family: 'Montserrat', sans-serif;
-      background-color: #064D95; /* Blue room background */
+      background-color: #064D95; /* Blue Room */
       color: white;
       text-align: center;
       padding: 40px 20px;
       text-shadow: 0 0 5px #57b9ff, 0 0 10px #57b9ff;
     }
 
-    img.logo {
-      width: 140px;
-      margin-bottom: 30px;
+    .logo {
+      max-width: 140px;
+      margin: 0 auto 30px;
+      display: block;
     }
 
     h1 {
-      font-size: 2.4rem;
+      font-size: 2.5rem;
       margin-bottom: 10px;
     }
 
@@ -32,60 +33,66 @@
       margin-bottom: 30px;
     }
 
-    .image-pair {
+    .image-wrapper {
       display: flex;
       justify-content: center;
       align-items: center;
-      gap: 20px;
-      margin: 30px 0;
-      flex-wrap: wrap;
+      gap: 0;
+      border: 4px solid gold;
+      border-radius: 16px;
+      overflow: hidden;
+      margin: 30px auto;
+      max-width: 800px;
+      box-shadow: 0 0 10px rgba(255, 215, 0, 0.5);
     }
 
-    .archetype-img {
-      max-width: 300px;
-      border: 4px solid gold;
-      border-radius: 12px;
-      box-shadow: 0 0 8px rgba(255, 215, 0, 0.6);
+    .image-wrapper img {
+      width: 50%;
+      height: auto;
+      object-fit: cover;
       user-select: none;
+      pointer-events: none;
     }
 
     .divider {
       width: 4px;
-      height: 100%;
       background-color: gold;
+      height: 100%;
     }
 
     .quote {
       font-style: italic;
       font-size: 1.1rem;
-      margin: 30px 0 10px;
+      margin: 30px auto 20px;
+      max-width: 700px;
     }
 
     .description {
-      max-width: 700px;
-      margin: 0 auto;
       font-size: 1.05rem;
       line-height: 1.6;
-      padding: 0 10px;
+      max-width: 700px;
+      margin: 0 auto;
     }
   </style>
 </head>
 <body>
-  <img src="../golden-le-libido-logo.png" alt="Le Libido Logo" class="logo" />
+  <img src="/golden-le-libido-logo.png" alt="Le Libido Logo" class="logo" />
 
   <h1>Tender Protector</h1>
   <div class="slogan">You lead with gravity, not volume.</div>
 
-  <div class="image-pair">
-    <img src="../images/tender_protector_male.jpg" alt="Male Tender Protector" class="archetype-img" oncontextmenu="return false">
+  <div class="image-wrapper">
+    <img src="/images/tender_protector_female.jpg" alt="Tender Protector Female" />
     <div class="divider"></div>
-    <img src="../images/tender_protector_female.jpg" alt="Female Tender Protector" class="archetype-img" oncontextmenu="return false">
+    <img src="/images/tender_protector_male.jpg" alt="Tender Protector Male" />
   </div>
 
   <div class="quote">“The strongest love is the love that can demonstrate its fragility.” – Paulo Coelho</div>
 
   <div class="description">
-    You lead with grace, grounding those around you. You’re the kind of partner others surrender to not out of fear, but trust. You’re not just in charge, you’re responsible. When you lead, people feel held, not handled. In dominance psychology, this is called secure authority — you don’t control people, you create space for them to feel free.
+    You lead with grace, grounding those around you through calm certainty and quiet strength. 
+    People feel safe in your presence—not because you're controlling, but because you’re reliable, emotionally intelligent, and deeply consistent. 
+    When others are spiraling, you’re the one they want beside them. You're not loud, you're centered. And that's your power.
   </div>
 </body>
 </html>
