--- a/profiles/tender_protector.html
+++ b/profiles/tender_protector.html
@@ -36,8 +36,7 @@
     .image-wrapper {
       display: flex;
       justify-content: center;
-      align-items: center;
-      gap: 0;
+      align-items: stretch;
       border: 4px solid gold;
       border-radius: 16px;
       overflow: hidden;
@@ -52,12 +51,12 @@
       object-fit: cover;
       user-select: none;
       pointer-events: none;
+      display: block;
     }
 
     .divider {
       width: 4px;
       background-color: gold;
-      height: 100%;
     }
 
     .quote {
