--- a/profiles/tender_protector.html
+++ b/profiles/tender_protector.html
@@ -3,55 +3,57 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Tender Protector – Le Libido</title>
+  <title>Tender Protector</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
-      margin: 0;
-      font-family: 'Montserrat', sans-serif;
-      background-color: #064D95; /* Blue Room */
+      background-color: #064D95; /* Blue room */
       color: white;
+      font-family: 'Montserrat', sans-serif;
+      margin: 0;
+      padding: 20px;
       text-align: center;
-      padding: 40px 20px;
-      text-shadow: 0 0 5px #57b9ff, 0 0 10px #57b9ff;
     }
 
     .logo {
-      max-width: 140px;
-      margin: 0 auto 30px;
+      max-width: 120px;
+      margin: 20px auto 10px;
       display: block;
     }
 
     h1 {
-      font-size: 2.5rem;
-      margin-bottom: 10px;
+      font-size: 2.2rem;
+      margin: 0;
+      font-style: italic;
     }
 
     .slogan {
       font-style: italic;
-      font-size: 1.2rem;
-      margin-bottom: 30px;
+      font-size: 1.1rem;
+      margin-top: 10px;
+      margin-bottom: 20px;
     }
 
-    .image-wrapper {
-      display: flex;
-      justify-content: center;
-      align-items: stretch;
+    .image-container {
       border: 4px solid gold;
-      border-radius: 16px;
+      border-radius: 12px;
       overflow: hidden;
-      margin: 30px auto;
-      max-width: 800px;
-      box-shadow: 0 0 10px rgba(255, 215, 0, 0.5);
+      display: inline-block;
+      width: 100%;
+      max-width: 700px;
+      margin-bottom: 20px;
     }
 
-    .image-wrapper img {
-      width: 50%;
+    .image-pair {
+      display: flex;
+    }
+
+    .image-pair img {
+      width: 100%;
       height: auto;
-      object-fit: cover;
-      user-select: none;
+      object-fit: contain;
       pointer-events: none;
-      display: block;
+      user-select: none;
     }
 
     .divider {
@@ -61,37 +63,37 @@
 
     .quote {
       font-style: italic;
-      font-size: 1.1rem;
-      margin: 30px auto 20px;
-      max-width: 700px;
+      margin: 25px auto 10px;
+      max-width: 600px;
+      font-size: 1rem;
     }
 
     .description {
-      font-size: 1.05rem;
-      line-height: 1.6;
       max-width: 700px;
-      margin: 0 auto;
+      margin: 20px auto;
+      line-height: 1.6;
+      font-size: 1rem;
     }
   </style>
 </head>
 <body>
-  <img src="/golden-le-libido-logo.png" alt="Le Libido Logo" class="logo" />
+  <img src="../golden-le-libido-logo.png" alt="Le Libido Logo" class="logo" />
 
   <h1>Tender Protector</h1>
   <div class="slogan">You lead with gravity, not volume.</div>
 
-  <div class="image-wrapper">
-    <img src="/images/tender_protector_female.jpg" alt="Tender Protector Female" />
-    <div class="divider"></div>
-    <img src="/images/tender_protector_male.jpg" alt="Tender Protector Male" />
+  <div class="image-container">
+    <div class="image-pair">
+      <img src="../images/tender_protector_female.jpg" alt="Tender Protector - Female">
+      <div class="divider"></div>
+      <img src="../images/tender_protector_male.jpg" alt="Tender Protector - Male">
+    </div>
   </div>
 
-  <div class="quote">“The strongest love is the love that can demonstrate its fragility.” – Paulo Coelho</div>
+  <div class="quote">"The strongest love is the love that can demonstrate its fragility." – Paulo Coelho</div>
 
   <div class="description">
-    You lead with grace, grounding those around you through calm certainty and quiet strength. 
-    People feel safe in your presence—not because you're controlling, but because you’re reliable, emotionally intelligent, and deeply consistent. 
-    When others are spiraling, you’re the one they want beside them. You're not loud, you're centered. And that's your power.
+    You lead with grace, grounding those around you in deep calm and connection. You're not loud, you're steady—an anchor for anyone lucky enough to get close. You don't take control, but you're always in it. Intimacy with you feels safe, strong, and quietly unforgettable.
   </div>
 </body>
 </html>
