--- a/profiles/tender_protector.html
+++ b/profiles/tender_protector.html
@@ -13,6 +13,7 @@
       margin: 0;
       padding: 20px;
       text-align: center;
+      text-shadow: 0 0 5px #57b9ff, 0 0 10px #57b9ff;
     }
 
     .logo {
@@ -22,38 +23,42 @@
     }
 
     h1 {
-      font-size: 2.2rem;
-      margin: 0;
-      font-style: italic;
+      font-size: 2.5rem;
+      margin-bottom: 10px;
     }
 
     .slogan {
       font-style: italic;
-      font-size: 1.1rem;
-      margin-top: 10px;
-      margin-bottom: 20px;
+      font-size: 1.2rem;
+      margin-bottom: 30px;
     }
 
     .image-container {
+      display: inline-block;
       border: 4px solid gold;
       border-radius: 12px;
       overflow: hidden;
-      display: inline-block;
-      width: 100%;
+      margin-bottom: 30px;
       max-width: 700px;
-      margin-bottom: 20px;
+      width: 100%;
+      box-shadow: 0 0 10px rgba(255, 215, 0, 0.5);
     }
 
     .image-pair {
       display: flex;
+      flex-direction: row;
     }
 
     .image-pair img {
       width: 100%;
       height: auto;
-      object-fit: contain;
+      object-fit: cover;
       pointer-events: none;
       user-select: none;
+    }
+
+    .half {
+      width: 50%;
     }
 
     .divider {
@@ -77,23 +82,29 @@
   </style>
 </head>
 <body>
-  <img src="../golden-le-libido-logo.png" alt="Le Libido Logo" class="logo" />
+  <img src="/golden-le-libido-logo.png" alt="Le Libido Logo" class="logo" />
 
   <h1>Tender Protector</h1>
   <div class="slogan">You lead with gravity, not volume.</div>
 
   <div class="image-container">
     <div class="image-pair">
-      <img src="../images/tender_protector_female.jpg" alt="Tender Protector - Female">
+      <div class="half">
+        <img src="/images/tender_protector_female.jpg" alt="Tender Protector - Female">
+      </div>
       <div class="divider"></div>
-      <img src="../images/tender_protector_male.jpg" alt="Tender Protector - Male">
+      <div class="half">
+        <img src="/images/tender_protector_male.jpg" alt="Tender Protector - Male">
+      </div>
     </div>
   </div>
 
-  <div class="quote">"The strongest love is the love that can demonstrate its fragility." – Paulo Coelho</div>
+  <div class="quote">“The strongest love is the love that can demonstrate its fragility.” – Paulo Coelho</div>
 
   <div class="description">
-    You lead with grace, grounding those around you in deep calm and connection. You're not loud, you're steady—an anchor for anyone lucky enough to get close. You don't take control, but you're always in it. Intimacy with you feels safe, strong, and quietly unforgettable.
+    You lead with grace, grounding those around you through calm certainty and quiet strength. 
+    People feel safe in your presence—not because you're controlling, but because you’re reliable, emotionally intelligent, and deeply consistent. 
+    When others are spiraling, you’re the one they want beside them. You're not loud, you're centered. And that's your power.
   </div>
 </body>
 </html>
