--- a/profiles/tender_protector.html
+++ b/profiles/tender_protector.html
@@ -106,5 +106,21 @@
     People feel safe in your presence—not because you're controlling, but because you’re reliable, emotionally intelligent, and deeply consistent. 
     When others are spiraling, you’re the one they want beside them. You're not loud, you're centered. And that's your power.
   </div>
+
+  <a href="/sexual-profiles.html" style="
+  display: inline-block;
+  margin-top: 30px;
+  padding: 12px 28px;
+  border: 2px solid white;
+  color: white;
+  background-color: transparent;
+  font-style: italic;
+  font-size: 1rem;
+  text-decoration: none;
+  border-radius: 25px;
+  transition: background-color 0.3s, color 0.3s;
+">
+  View All Sexual Profiles
+</a>
 </body>
 </html>
