--- a/profiles/tender_protector.html
+++ b/profiles/tender_protector.html
@@ -107,7 +107,7 @@
     When others are spiraling, you’re the one they want beside them. You're not loud, you're centered. And that's your power.
   </div>
 
-  <a href="/sexual-profiles.html" style="
+ <a href="/archetype-gallery.html" style="
   display: inline-block;
   margin-top: 30px;
   padding: 12px 28px;
