--- a/archetype-gallery.html
+++ b/archetype-gallery.html
@@ -14,27 +14,26 @@
     .red-room { background-color: #950606; }
 
     .logo-img {
-  display: block;
-  margin: 0 auto;
-  max-width: 125px;
-  height: auto;
-  padding-top: 10px; /* reduce top padding */
-  padding-bottom: 10px; /* add spacing below logo */
-}
+      display: block;
+      margin: 0 auto;
+      max-width: 125px;
+      height: auto;
+      padding-top: 10px;
+      padding-bottom: 10px;
+    }
 
-.page-title {
-  text-align: center;
-  padding: 0; /* remove extra top/bottom padding */
-  margin: 6px 0; /* tighter spacing around title */
-}
+    .page-title {
+      text-align: center;
+      margin: 6px 0;
+    }
 
-.title-line {
-  height: 1px;
-  background-color: white;
-  width: 100%;
-  max-width: 700px;
-  margin: 6px auto; /* closer to title */
-}
+    .title-line {
+      height: 1px;
+      background-color: white;
+      width: 100%;
+      max-width: 700px;
+      margin: 6px auto;
+    }
 
     .page-title h1 {
       font-size: 2.6rem;
@@ -43,14 +42,6 @@
       color: white;
       text-shadow: 0 0 8px #00ccff, 0 0 12px #00ccff;
       margin: 10px 0;
-    }
-
-    .title-line {
-      height: 1px;
-      background-color: white;
-      width: 100%;
-      max-width: 700px;
-      margin: 4px auto;
     }
 
     .section {
@@ -83,7 +74,6 @@
 
     .image-pair a {
       width: 50%;
-      pointer-events: auto;
     }
 
     .image-pair img {
@@ -92,7 +82,6 @@
       display: block;
       object-fit: contain;
       -webkit-user-drag: none;
-      pointer-events: none;
     }
 
     .divider {
@@ -122,27 +111,27 @@
       text-decoration: underline;
     }
 
- .find-type-button {
-  display: block;
-  margin: 30px auto 10px;
-  padding: 12px 28px;
-  font-family: 'Poppins', sans-serif;
-  font-size: 1rem;
-  font-style: italic;
-  color: white;
-  background-color: transparent;
-  border: 2px solid white;
-  border-radius: 25px;
-  text-align: center;
-  text-decoration: none;
-  width: fit-content;
-  transition: background-color 0.3s, color 0.3s;
-}
+    .find-type-button {
+      display: block;
+      margin: 30px auto 10px;
+      padding: 12px 28px;
+      font-family: 'Poppins', sans-serif;
+      font-size: 1rem;
+      font-style: italic;
+      color: white;
+      background-color: transparent;
+      border: 2px solid white;
+      border-radius: 25px;
+      text-align: center;
+      text-decoration: none;
+      width: fit-content;
+      transition: background-color 0.3s, color 0.3s;
+    }
 
-.find-type-button:hover {
-  background-color: white;
-  color: black;
-}
+    .find-type-button:hover {
+      background-color: white;
+      color: black;
+    }
   </style>
 </head>
 
@@ -154,167 +143,176 @@
   </div>
   <div class="title-line"></div>
 
-  <!-- BLUE ROOM -->
   <div class="section container">
+    <!-- Tender Protector -->
     <div class="archetype-card">
       <div class="image-container">
         <div class="image-pair">
-          <a href="tender-protector.html"><img src="images/tender_protector_female.jpg" alt="Tender Protector - Female"></a>
+          <a href="profiles/tender-protector.html"><img src="images/tender_protector_female.jpg" alt="Tender Protector - Female"></a>
           <div class="divider"></div>
-          <a href="tender-protector.html"><img src="images/tender_protector_male.jpg" alt="Tender Protector - Male"></a>
+          <a href="profiles/tender-protector.html"><img src="images/tender_protector_male.jpg" alt="Tender Protector - Male"></a>
         </div>
       </div>
-      <h3><a href="tender-protector.html">Tender Protector</a></h3>
+      <h3><a href="profiles/tender-protector.html">Tender Protector</a></h3>
       <p class="slogan">You lead with gravity, not volume.</p>
     </div>
 
+    <!-- Devoted Darling -->
     <div class="archetype-card">
       <div class="image-container">
         <div class="image-pair">
-          <a href="devoted-darling.html"><img src="images/devoted_darling_female.jpg" alt="Devoted Darling - Female"></a>
+          <a href="profiles/devoted-darling.html"><img src="images/devoted_darling_female.jpg" alt="Devoted Darling - Female"></a>
           <div class="divider"></div>
-          <a href="devoted-darling.html"><img src="images/devoted_darling_male.jpg" alt="Devoted Darling - Male"></a>
+          <a href="profiles/devoted-darling.html"><img src="images/devoted_darling_male.jpg" alt="Devoted Darling - Male"></a>
         </div>
       </div>
-      <h3><a href="devoted-darling.html">Devoted Darling</a></h3>
+      <h3><a href="profiles/devoted-darling.html">Devoted Darling</a></h3>
       <p class="slogan">Nothing is as kinky as loyalty.</p>
     </div>
-        <div class="archetype-card">
+
+    <!-- Heatwave -->
+    <div class="archetype-card">
       <div class="image-container">
         <div class="image-pair">
-          <a href="heatwave.html"><img src="images/heatwave_female.jpg" alt="Heatwave - Female"></a>
+          <a href="profiles/heatwave.html"><img src="images/heatwave_female.jpg" alt="Heatwave - Female"></a>
           <div class="divider"></div>
-          <a href="heatwave.html"><img src="images/heatwave_male.jpg" alt="Heatwave - Male"></a>
+          <a href="profiles/heatwave.html"><img src="images/heatwave_male.jpg" alt="Heatwave - Male"></a>
         </div>
       </div>
-      <h3><a href="heatwave.html">Heatwave</a></h3>
+      <h3><a href="profiles/heatwave.html">Heatwave</a></h3>
       <p class="slogan">There's no need to change who you are, because people will adjust to you.</p>
     </div>
 
+    <!-- Mood Multiplier -->
     <div class="archetype-card">
       <div class="image-container">
         <div class="image-pair">
-          <a href="mood-multiplier.html"><img src="images/mood_multiplier_female.jpg" alt="Mood Multiplier - Female"></a>
+          <a href="profiles/mood-multiplier.html"><img src="images/mood_multiplier_female.jpg" alt="Mood Multiplier - Female"></a>
           <div class="divider"></div>
-          <a href="mood-multiplier.html"><img src="images/mood_multiplier_male.jpg" alt="Mood Multiplier - Male"></a>
+          <a href="profiles/mood-multiplier.html"><img src="images/mood_multiplier_male.jpg" alt="Mood Multiplier - Male"></a>
         </div>
       </div>
-      <h3><a href="mood-multiplier.html">Mood Multiplier</a></h3>
+      <h3><a href="profiles/mood-multiplier.html">Mood Multiplier</a></h3>
       <p class="slogan">You match their vibe—and raise it.</p>
     </div>
 
     <a href="index.html" class="find-type-button">Find Your Type</a>
   </div>
-
-  <!-- GREEN ROOM -->
+    <!-- GREEN ROOM -->
   <div class="green-room">
     <div class="section container">
+
+      <!-- Generous Giver -->
       <div class="archetype-card">
         <div class="image-container">
           <div class="image-pair">
-            <a href="generous-giver.html"><img src="images/generous_giver_female.jpg" alt="Generous Giver - Female"></a>
+            <a href="profiles/generous-giver.html"><img src="images/generous_giver_female.jpg" alt="Generous Giver - Female"></a>
             <div class="divider"></div>
-            <a href="generous-giver.html"><img src="images/generous_giver_male.jpg" alt="Generous Giver - Male"></a>
+            <a href="profiles/generous-giver.html"><img src="images/generous_giver_male.jpg" alt="Generous Giver - Male"></a>
           </div>
         </div>
-        <h3><a href="generous-giver.html">Generous Giver</a></h3>
+        <h3><a href="profiles/generous-giver.html">Generous Giver</a></h3>
         <p class="slogan">You have so much to give, you just need someone to give it to.</p>
       </div>
 
+      <!-- Promiscuous Plaything -->
       <div class="archetype-card">
         <div class="image-container">
           <div class="image-pair">
-            <a href="promiscuous-plaything.html"><img src="images/promiscuous_plaything_female.jpg" alt="Promiscuous Plaything - Female"></a>
+            <a href="profiles/promiscuous-plaything.html"><img src="images/promiscuous_plaything_female.jpg" alt="Promiscuous Plaything - Female"></a>
             <div class="divider"></div>
-            <a href="promiscuous-plaything.html"><img src="images/promiscuous_plaything_male.jpg" alt="Promiscuous Plaything - Male"></a>
+            <a href="profiles/promiscuous-plaything.html"><img src="images/promiscuous_plaything_male.jpg" alt="Promiscuous Plaything - Male"></a>
           </div>
         </div>
-        <h3><a href="promiscuous-plaything.html">Promiscuous Plaything</a></h3>
+        <h3><a href="profiles/promiscuous-plaything.html">Promiscuous Plaything</a></h3>
         <p class="slogan">Are you ready for a wild ride!</p>
       </div>
 
+      <!-- Bedroom Adventurer -->
       <div class="archetype-card">
         <div class="image-container">
           <div class="image-pair">
-            <a href="bedroom-adventurer.html"><img src="images/bedroom_adventurer_female.jpg" alt="Bedroom Adventurer - Female"></a>
+            <a href="profiles/bedroom-adventurer.html"><img src="images/bedroom_adventurer_female.jpg" alt="Bedroom Adventurer - Female"></a>
             <div class="divider"></div>
-            <a href="bedroom-adventurer.html"><img src="images/bedroom_adventurer_male.jpg" alt="Bedroom Adventurer - Male"></a>
+            <a href="profiles/bedroom-adventurer.html"><img src="images/bedroom_adventurer_male.jpg" alt="Bedroom Adventurer - Male"></a>
           </div>
         </div>
-        <h3><a href="bedroom-adventurer.html">Bedroom Adventurer</a></h3>
+        <h3><a href="profiles/bedroom-adventurer.html">Bedroom Adventurer</a></h3>
         <p class="slogan">I'm up for anything and down to get down and dirty.</p>
       </div>
 
+      <!-- Charmer in Charge -->
       <div class="archetype-card">
         <div class="image-container">
           <div class="image-pair">
-            <a href="charmer-in-charge.html"><img src="images/charmer_in_charge_female.jpg" alt="Charmer in Charge - Female"></a>
+            <a href="profiles/charmer-in-charge.html"><img src="images/charmer_in_charge_female.jpg" alt="Charmer in Charge - Female"></a>
             <div class="divider"></div>
-            <a href="charmer-in-charge.html"><img src="images/charmer_in_charge_male.jpg" alt="Charmer in Charge - Male"></a>
+            <a href="profiles/charmer-in-charge.html"><img src="images/charmer_in_charge_male.jpg" alt="Charmer in Charge - Male"></a>
           </div>
         </div>
-        <h3><a href="charmer-in-charge.html">Charmer in Charge</a></h3>
+        <h3><a href="profiles/charmer-in-charge.html">Charmer in Charge</a></h3>
         <p class="slogan">You don’t just take control. You make them beg for it.</p>
       </div>
 
       <a href="index.html" class="find-type-button">Find Your Type</a>
     </div>
   </div>
-
-  <!-- RED ROOM -->
+    <!-- RED ROOM -->
   <div class="red-room">
     <div class="section container">
+
+      <!-- Claimed & Trained -->
       <div class="archetype-card">
         <div class="image-container">
           <div class="image-pair">
-            <a href="claimed-and-trained.html"><img src="images/claimed__trained_female.jpg" alt="Claimed & Trained - Female"></a>
+            <a href="profiles/claimed-and-trained.html"><img src="images/claimed__trained_female.jpg" alt="Claimed & Trained - Female"></a>
             <div class="divider"></div>
-            <a href="claimed-and-trained.html"><img src="images/claimed__trained_male.jpg" alt="Claimed & Trained - Male"></a>
+            <a href="profiles/claimed-and-trained.html"><img src="images/claimed__trained_male.jpg" alt="Claimed & Trained - Male"></a>
           </div>
         </div>
-        <h3><a href="claimed-and-trained.html">Claimed & Trained</a></h3>
+        <h3><a href="profiles/claimed-and-trained.html">Claimed & Trained</a></h3>
         <p class="slogan">The deeper you give in the more pleasure you'll feel.</p>
       </div>
 
+      <!-- The Punish Me -->
       <div class="archetype-card">
         <div class="image-container">
           <div class="image-pair">
-            <a href="the-punish-me.html"><img src="images/the_punish_me_female.jpg" alt="The Punish Me - Female"></a>
+            <a href="profiles/the-punish-me.html"><img src="images/the_punish_me_female.jpg" alt="The Punish Me - Female"></a>
             <div class="divider"></div>
-            <a href="the-punish-me.html"><img src="images/the_punish_me_male.jpg" alt="The Punish Me - Male"></a>
+            <a href="profiles/the-punish-me.html"><img src="images/the_punish_me_male.jpg" alt="The Punish Me - Male"></a>
           </div>
         </div>
-        <h3><a href="the-punish-me.html">The Punish Me</a></h3>
+        <h3><a href="profiles/the-punish-me.html">The Punish Me</a></h3>
         <p class="slogan">What you call defiance, I call foreplay.</p>
       </div>
 
+      <!-- The Provoker -->
       <div class="archetype-card">
         <div class="image-container">
           <div class="image-pair">
-            <a href="the-provoker.html"><img src="images/the_provoker_female.jpg" alt="The Provoker - Female"></a>
+            <a href="profiles/the-provoker.html"><img src="images/the_provoker_female.jpg" alt="The Provoker - Female"></a>
             <div class="divider"></div>
-            <a href="the-provoker.html"><img src="images/the_provoker_male.jpg" alt="The Provoker - Male"></a>
+            <a href="profiles/the-provoker.html"><img src="images/the_provoker_male.jpg" alt="The Provoker - Male"></a>
           </div>
         </div>
-        <h3><a href="the-provoker.html">The Provoker</a></h3>
+        <h3><a href="profiles/the-provoker.html">The Provoker</a></h3>
         <p class="slogan">You press buttons—on purpose.</p>
       </div>
 
+      <!-- Dungeon Master -->
       <div class="archetype-card">
         <div class="image-container">
           <div class="image-pair">
-            <a href="dungeon-master.html"><img src="images/dungeon_master_female.jpg" alt="Dungeon Master - Female"></a>
+            <a href="profiles/dungeon-master.html"><img src="images/dungeon_master_female.jpg" alt="Dungeon Master - Female"></a>
             <div class="divider"></div>
-            <a href="dungeon-master.html"><img src="images/dungeon_master_male.jpg" alt="Dungeon Master - Male"></a>
+            <a href="profiles/dungeon-master.html"><img src="images/dungeon_master_male.jpg" alt="Dungeon Master - Male"></a>
           </div>
         </div>
-        <h3><a href="dungeon-master.html">Dungeon Master</a></h3>
+        <h3><a href="profiles/dungeon-master.html">Dungeon Master</a></h3>
         <p class="slogan">You’re not just having a fantasy. You’re the one in charge of it.</p>
       </div>
 
       <a href="index.html" class="find-type-button">Find Your Type</a>
     </div>
   </div>
-
-</body>
-</html>
