--- a/profiles/promiscuous_plaything.html
+++ b/profiles/promiscuous_plaything.html
@@ -106,7 +106,7 @@
   <img src="/golden-le-libido-logo.png" alt="Le Libido Logo" class="logo" />
 
   <h1>Promiscuous Plaything</h1>
-  <div class="slogan">Are you ready for a wild ride!</div>
+  <div class="slogan">Get ready for a wild ride!</div>
 
   <div class="image-container">
     <div class="image-half">
