--- a/archetype-gallery.html
+++ b/archetype-gallery.html
@@ -192,7 +192,7 @@
         </div>
       </div>
       <h3><a href="profiles/mood_multiplier.html">Mood Multiplier</a></h3>
-      <p class="slogan">You match their vibe—and raise it.</p>
+      <p class="slogan">You match their vibe and raise it.</p>
     </div>
 
     <a href="index.html" class="find-type-button">Find Your Type</a>
@@ -224,7 +224,7 @@
           </div>
         </div>
         <h3><a href="profiles/promiscuous_plaything.html">Promiscuous Plaything</a></h3>
-        <p class="slogan">Are you ready for a wild ride!</p>
+        <p class="slogan">Get ready for a wild ride!</p>
       </div>
 
       <!-- Bedroom Adventurer -->
@@ -237,7 +237,7 @@
           </div>
         </div>
         <h3><a href="profiles/bedroom_adventurer.html">Bedroom Adventurer</a></h3>
-        <p class="slogan">I'm up for anything and down to get down and dirty.</p>
+        <p class="slogan">I'm up for anything and like to get down and dirty.</p>
       </div>
 
       <!-- Charmer in Charge -->
@@ -296,7 +296,7 @@
           </div>
         </div>
         <h3><a href="profiles/the_provoker.html">The Provoker</a></h3>
-        <p class="slogan">You press buttons—on purpose.</p>
+        <p class="slogan">You press buttons...on purpose.</p>
       </div>
 
       <!-- Dungeon Master -->
