--- a/profiles/mood_multiplier.html
+++ b/profiles/mood_multiplier.html
@@ -106,7 +106,7 @@
   <img src="/golden-le-libido-logo.png" alt="Le Libido Logo" class="logo" />
 
   <h1>Mood Multiplier</h1>
-  <div class="slogan">You match their vibe—and raise it.</div>
+  <div class="slogan">You match their vibe and raise it.</div>
 
   <div class="image-container">
     <div class="image-half">
