--- a/profiles/devoted_darling.html
+++ b/profiles/devoted_darling.html
@@ -102,10 +102,7 @@
   <div class="quote">“Love is composed of a single soul inhabiting two bodies.” – Aristotle</div>
 
   <div class="description">
-    You don’t perform devotion, you embody it. You show up, you stay present, and you make others feel safe to surrender.
-    In your world, trust isn’t given—it’s earned—and once someone has it, they’re never the same.
-    You thrive on depth, consistency, and knowing that your partner feels claimed and cared for.
-    You may look soft on the outside, but your love has backbone. Your devotion is a power move—and people feel it.
+   You don’t perform devotion, you embody it. For you, intimacy is about trust, not control. Once someone proves they’re worthy, you don’t just give affection, you give access. Your submission isn’t passive; it’s sacred. Psychologists call this “secure surrender,” where emotional safety becomes the ultimate turn-on.
   </div>
 
   <a href="/archetype-gallery.html" style="
