--- a/profiles/mood_multiplier.html
+++ b/profiles/mood_multiplier.html
@@ -121,9 +121,7 @@
   <div class="quote">“The most seductive thing you can do is mirror their desire—then amplify it.”</div>
 
   <div class="description">
-    You don’t take over a room—you transform it. When someone’s energy is high, you rise to meet them. When it’s soft, you soften too.
-    But you're no chameleon—you’re a prism. You take what’s given, and you enhance it. Partners feel more alive, more themselves, more turned on in your presence.
-    You're not just reflecting the moment. You're elevating it.
+   You don’t lead or follow, you co-create. Your sexual style is responsive, intuitive, and emotionally intelligent. Like a mirror that amplifies light, you reflect and enhance what others bring. This is a classic example of responsive desire, you don’t act until you feel something real. And when you do, you bring it hard.
   </div>
 
   <a href="/archetype-gallery.html" class="view-all-button">View All Sexual Profiles</a>
