--- a/profiles/heatwave.html
+++ b/profiles/heatwave.html
@@ -147,12 +147,7 @@
   <div class="quote">"I don’t just bring the heat. I *am* the temperature."</div>
 
   <div class="description">
-    Some people adapt to their surroundings. You make your surroundings adapt to you.
-    The Heatwave archetype exudes sensual intensity without needing to say a word.
-    You magnetize others with your raw authenticity—unapologetically yourself, no edits or disclaimers.
-    Your energy burns through small talk, leaving only the realest desires exposed.
-    Others might try to play it cool, but they’re already sweating.
-    You don’t chase—because everyone’s already chasing you.
+    You don’t just walk into a room, you tilt its emotional climate. You know what you want and how to get it, without ever needing to say it out loud. Psychology calls this “initiating desire” because you’re the one who ignites the spark. Whether you lead or tease, you’re always in tune with your own power.
   </div>
 
   <a href="/archetype-gallery.html" style="
