--- a/profiles/tender_protector.html
+++ b/profiles/tender_protector.html
@@ -102,9 +102,7 @@
   <div class="quote">“The strongest love is the love that can demonstrate its fragility.” – Paulo Coelho</div>
 
   <div class="description">
-    You lead with grace, grounding those around you through calm certainty and quiet strength. 
-    People feel safe in your presence—not because you're controlling, but because you’re reliable, emotionally intelligent, and deeply consistent. 
-    When others are spiraling, you’re the one they want beside them. You're not loud, you're centered. And that's your power.
+    You lead with grace, grounding those around you. You’re the kind of partner others surrender to not out of fear, but trust. You’re not just in charge, you’re responsible. When you lead, people feel held, not handled. In dominance psychology, this is called secure authority, you don’t control people, you create space for them to feel free.
   </div>
 
  <a href="/archetype-gallery.html" style="
