--- a/profiles/promiscuous_plaything.html
+++ b/profiles/promiscuous_plaything.html
@@ -121,9 +121,7 @@
   <div class="quote">“I’m not here to be tamed—I’m here to be enjoyed.”</div>
 
   <div class="description">
-    You crave experiences that are raw, real, and unapologetically playful. You don’t just turn heads—you invite people to act on their impulses.
-    For you, seduction is a game, and pleasure is the prize. You’re not ashamed of your desire—you celebrate it.
-    But underneath the heat, there’s a yearning to be wanted not just for your body, but for your freedom too.
+    You’re here for the spark, the chase, the shiver that runs down your spine when someone wants you. You crave sensation and emotional thrill, but only when it feels real. Psychologists call this “exploratory submission,” where openness fuels arousal. You’re not just a plaything, you’re the prize.
   </div>
 
   <a href="/archetype-gallery.html" class="view-all-button">View All Sexual Profiles</a>
