--- a/profiles/generous_giver.html
+++ b/profiles/generous_giver.html
@@ -121,9 +121,7 @@
   <div class="quote">“The best kind of giving comes from a place of fullness, not obligation.”</div>
 
   <div class="description">
-    You love to please. Not out of duty, but because it brings you joy to see others light up. Your generosity isn’t a weakness—it’s your superpower.
-    You intuit what others crave before they even ask, and you deliver it with warmth, intention, and maybe a little mischief. 
-    But your gift can only thrive with someone who respects your giving nature without taking it for granted.
+   You feel most alive when you’re tuning into someone else. Giving isn’t a performance, it’s a connection ritual. Whether you’re leading or letting go, your goal is reciprocity. This is a textbook case of mutual responsive intimacy, a flexible erotic role based on emotional availability, not control. 
   </div>
 
   <a href="/archetype-gallery.html" class="view-all-button">View All Sexual Profiles</a>
