--- a/profiles/bedroom_adventurer.html
+++ b/profiles/bedroom_adventurer.html
@@ -121,9 +121,7 @@
   <div class="quote">“The only real voyage of discovery consists not in seeking new landscapes, but in having new eyes.” – Proust</div>
 
   <div class="description">
-    Curiosity is your kink. You crave new sensations, unexplored angles, and playful partners willing to go on a journey with you.
-    You’re not just looking for someone—you’re looking for an experience. You're uninhibited, innovative, and refreshingly open-minded.
-    With the right match, you’ll never have the same night twice—and that’s exactly how you like it.
+  You crave novelty. You like to stir things up and test the edges. You’re turned on by the idea that anything could happen and you might be the one to make it happen. Research shows that eroticism thrives on psychological novelty. You’re not looking to disrupt, you’re looking to discover.
   </div>
 
   <a href="/archetype-gallery.html" class="view-all-button">View All Sexual Profiles</a>
