--- a/profiles/charmer_in_charge.html
+++ b/profiles/charmer_in_charge.html
@@ -121,9 +121,7 @@
   <div class="quote">“Seduction is about intelligence and wit. Someone who makes me laugh has every chance to seduce me.” – Ricci</div>
 
   <div class="description">
-    You’re flirtatious, quick-witted, and totally unapologetic about how much power you have over others.
-    You know what people want—and you know how to make them ask for it. But behind that confident smirk is emotional awareness.
-    You don’t dominate for the sake of it. You do it to bring people out of their shell and into something unforgettable.
+You don’t dominate with force, you dominate with allure. You lead with confidence and draw people in with magnetic energy. You’re the person they don’t want to disobey, not out of fear, but fascination. Dominance researchers call this persuasive power, it’s less about pushing and more about pull.
   </div>
 
   <a href="/archetype-gallery.html" class="view-all-button">View All Sexual Profiles</a>
