--- a/profiles/claimed_and_trained.html
+++ b/profiles/claimed_and_trained.html
@@ -121,9 +121,7 @@
   <div class="quote">“Obedience is not weakness. It’s a decision to trust someone with your pleasure.”</div>
 
   <div class="description">
-    You’re not afraid to surrender. In fact, that’s your kink. But only to someone who proves themselves worthy. 
-    You crave guidance, structure, and praise—and the right partner unlocks a version of you that’s playful, powerful, and completely uninhibited. 
-    You don’t just want to obey. You want to thrive in it.
+   You don’t want to just submit, you want to surrender completely. You want to be dominated by someone you can't resist. Commands don’t restrict you; they turn you on. Submission, for you, is an erotic identity, not a mere role. Psychologists call this identity-congruent kink, when obedience isn’t just hot, it fits just right.
   </div>
 
   <a href="/archetype-gallery.html" class="view-all-button">View All Sexual Profiles</a>
