--- a/profiles/the_punish_me.html
+++ b/profiles/the_punish_me.html
@@ -121,9 +121,7 @@
   <div class="quote">“Tell me I’m wrong one more time.” —You, right before it gets good</div>
 
   <div class="description">
-    You like to test limits. Not because you want to break them, but because you want someone strong enough to hold the line. 
-    Your rebellion is a love language—and every act of disobedience is a secret invitation for someone to take control. 
-    You push boundaries to feel someone push back. Hard.
+   You test limits, not to break them, but to find out who’s strong enough to handle your full intensity. You thrive on dynamic power play. Research in kink psychology shows that bratting is often a form of intimacy-seeking resistance, you push to see who can truly push back. Your defiance is a dare. You're looking for someone who's strong enough to handle your intensity and put you back in your place. 
   </div>
 
   <a href="/archetype-gallery.html" class="view-all-button">View All Sexual Profiles</a>
